# forge-engine

./: .dockerignore  .env.example  .forgeignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SPEC_COMPLIANCE.md  pyproject.toml
.github/workflows/: release.yml
doc/: hive-discovery-spec.md
docs/: architecture-v3.md  deployment.md
docs/adr/: 0001-v3-architecture.md
docs/research/: cli-integration-research.md
forge/: __init__.py  __main__.py  app.py  app_helpers.py  claude_skill.md  cli.py  config.py  config_io.py  help.py  manifest.json  mcp_server.py  migrations.py  phases.py  schemas.py  setup_wizard.py  standalone.py  updater.py
forge/compliance/: __init__.py  attestation.py  nist_ssdf.py  ssdf_mapping.yaml
forge/conventions/: __init__.py  extractor.py  formatter.py  models.py  parsers.py
forge/evaluation/: __init__.py  aivss.py  aivss_detector.py  compliance.py  dimensions.py  feedback.py  quality_gate.py  remediation_items.py  report.py
forge/execution/: __init__.py  actionability.py  baseline.py  checkpoint.py  context_broker.py  context_builder.py  convergence.py  delta.py  events.py  feedback.py  fingerprint.py  forge_executor.py  forgeignore.py  intent_analyzer.py  json_utils.py  llm_validator.py  opengrep_runner.py  quality_gate.py  readiness_score.py  report.py  report_dependency_graph.py  report_helpers.py  report_rendering.py  run_telemetry.py  severity.py  sweaf_adapter.py  sweaf_bridge.py  telemetry.py  test_runner.py  tier1_handlers.py  tier1_helpers.py  tier_router.py  worktree.py
forge/graph/: __init__.py  builder.py  language_extractors.py  models.py  segmentation.py
forge/learning/: __init__.py  backward.py  cli.py  feedback.py  graph.py  optimizer.py  report.py  validation.py
forge/patterns/: __init__.py  context.py  extractor.py  learner.py  loader.py  schema.py
forge/prompts/: __init__.py  architecture_reviewer.py  code_reviewer.py  codebase_analyst.py  coder.py  debt_tracker.py  escalation_agent.py  fix_strategist.py  integration_validator.py  intent_analyzer.py  project_context.py  quality_auditor.py  security_auditor.py  test_generator.py  triage_classifier.py
forge/reasoners/: __init__.py  discovery.py  hive_discovery.py  remediation.py  triage.py  validation.py
forge/swarm/: __init__.py  orchestrator.py  synthesizer.py  worker.py  worker_utils.py  workers.py
roadmap/: 2026-03-26-v2p-updater-help-design.md  2026-03-28-forgeignore-review-hook-design.md
roadmap/education/: 2026-03-25-codebase-guide-design.md  2026-03-25-test-education-design.md
scripts/: build_daytona_snapshot.py  build_manifest.py  install.sh
tasks/: prompt-overhaul-and-project-context-spec.md  vulnerability-pattern-library-spec.md
tests/: conftest.py
tests/fixtures/: schemas.py
tests/golden/: README.md  test_golden_suite.py
tests/integration/: conftest.py  test_evaluation_pipeline.py  test_execute_remediation.py  test_hive_discovery.py  test_hive_live_e2e.py  test_inner_loop.py  test_live_e2e.py  test_matrix_e2e.py  test_middle_loop.py  test_model_validation_e2e.py  test_opengrep_pipeline.py  test_outer_loop.py  test_sweaf_bridge.py
tests/unit/: test_actionability.py  test_aivss.py  test_aivss_detector.py  test_app_helpers.py  test_baseline.py  test_checkpoint.py  test_cli.py  test_cli_setup.py  test_compliance.py  test_config.py  test_config_swarm.py  test_context_broker.py  test_context_builder.py  test_conventions_extractor.py  test_conventions_parsers.py  test_convergence.py  test_delta.py  test_evaluation_checks.py  test_evaluation_dimensions.py  test_evaluation_feedback.py  test_evaluation_quality_gate.py  test_executor_loops.py  test_feedback.py  test_fingerprint.py  test_forgeignore.py  test_graph_builder.py  test_graph_models.py  test_intent_analyzer.py  test_json_utils.py  test_llm_validator.py  test_main.py  test_mcp_server.py  test_opengrep_rules.py  (+24 more)
(+64 files in other folders)
