[project]
name = "forge-engine"
version = "0.2.0"
description = "FORGE: Framework for Orchestrated Remediation & Governance Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "agentfield>=0.1.9",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.20"]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
forge-engine = "forge.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for individual agents",
    "integration: Integration tests for control loops",
    "golden: Golden test suite (e2e with flawed codebases)",
]
