[project]
name = "vibe2prod"
version = "0.3.0"
description = "AI-powered code audit and remediation. Turns vibe-coded MVPs into production-ready software."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
platform = ["agentfield>=0.1.9"]
claude = ["claude-agent-sdk>=0.1.20"]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
vibe2prod = "forge.cli:main"
forge-engine = "forge.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for individual agents",
    "integration: Integration tests for control loops",
    "golden: Golden test suite (e2e with flawed codebases)",
    "live: Live E2E tests against real AgentField + LLM APIs (requires --run-live or FORGE_LIVE_TESTS=1)",
    "timeout: Per-test timeout in seconds (requires pytest-timeout plugin)",
]
