[project]
name = "vibe2prod"
version = "1.5.2"
description = "AI-powered code audit and remediation. Turns vibe-coded MVPs into production-ready software."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "networkx>=3.0",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.20"]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
vibe2prod = "forge.cli:main"
forge-mcp = "forge.mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
forge = ["skills/*/SKILL.md", "manifest.json", "rules/**/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for individual agents",
    "integration: Integration tests for control loops",
    "golden: Golden test suite (e2e with flawed codebases)",
    "live: Live E2E tests against real AgentField + LLM APIs (requires --run-live or FORGE_LIVE_TESTS=1)",
    "timeout: Per-test timeout in seconds (requires pytest-timeout plugin)",
]

[tool.coverage.run]
source = ["forge"]

[tool.coverage.report]
fail_under = 60

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
